# archolith-context

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF-2026-05-25.md  LICENSE  QWEN.md  README.md  THIRD-PARTY-LICENSES.txt  config_overrides.json  docker-compose.yml  gemini.md  pyproject.toml
.agent/: BENCHMARK-AUDIT-TEMPLATE.md  CHANGELOG.md  CONCURRENCY-LOAD-TEMPLATE.md  CONTEXT-QUALITY-TEMPLATE.md  MEMORY-ALIGNMENT-TEMPLATE.md  PRODUCT-READINESS-TEMPLATE.md  README.md  RESILIENCE-CHAOS-TEMPLATE.md  ROADMAP.md  SECURITY-PRIVACY-TEMPLATE.md  architecture.md  data_models.md  feature-rollout-matrix.md  ladybug-string-param-struct-coercion-bug.md  mcp-extractor-ideas.md  plugin-version-policy.md
.agent/audits/: 2026-05-21-context-quality-gpt4omini-baseline.md  2026-05-21-gpt4omini-16turn-baseline.md
.agent/for-review/: AUDIT-2026-06-07-chunk1-proxy-openai.md  AUDIT-chunk3-graph.md  AUDIT-chunk4-assembler-extractor-models-shared.md  AUDIT-chunk5-trace-memory-config.md  AUDIT-curator-chunk2.md  WRAPUP-2026-06-09-archolith-context-concurrency-correctness.md  WRAPUP-2026-06-20-outstanding-issues-remediation-v3.md
.agent/plans/: adaptive-tail-sizing-plan.md  cold-start-context-cache-plan.md  goal-drift-detection-plan.md  open-source-launch-plan.md  per-tool-extraction-plan.md  prompt-cache-stability-plan.md
.agent/prompts/: codex-readme-docs.md
.agent/workflows/: benchmarking.md  code_conventions.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
archolith_proxy/: __init__.py  admin.py  compliance.py  config.py  engine.py  filter_adapter.py  logging_config.py  main.py  metrics.py  rtk.py  session_goal.py
archolith_proxy/assembler/: compaction.py  compress.py  context.py  goal_drift.py  intent.py  query_rewrite.py  tail.py
archolith_proxy/config/: __init__.py  constants.py  paths.py  profiles.py  runtime.py  settings.py
archolith_proxy/curator/: __init__.py  assembler.py  briefing.py  context_cache.py  corpus_profile.py  dependency_graph.py  deterministic_assembler.py  loop.py  persistence.py  pipeline.py  prepper.py  prompts.py  result.py  schemas.py  scoring.py  state.py  tools.py  worker.py  working_set.py
archolith_proxy/extractor/: __init__.py  base.py  budget.py  client.py  dedup.py  embeddings.py  prompts.py  registry.py
archolith_proxy/graph/: __init__.py  backend.py  cleanup.py  decisions.py  driver.py  edges.py  facts.py  ladybug_backend.py  ladybug_checkpoint.py  ladybug_edges.py  ladybug_facts.py  ladybug_files.py  ladybug_sessions.py  neo4j_backend.py  protocol.py  repository.py  session.py  session_config.py
archolith_proxy/memory/: __init__.py  models.py  promotion.py  registry.py
archolith_proxy/models/: __init__.py  dtos.py  enums.py  graph_edges.py  graph_nodes.py
archolith_proxy/openai/: chat.py  chat_overlay.py  chat_passthrough.py  errors.py  extraction.py  file_cache.py  helpers.py  models.py  non_streaming.py  passthrough.py  router.py  schemas.py  streaming.py
archolith_proxy/plugins/: README.md  __init__.py  audit_plugin.py  filter_plugin.py  memory_plugin.py  registry.py
archolith_proxy/proxy/: __init__.py  agent_solo.py  circuit_breaker.py  live.py  locks.py  recall.py  rewrite.py  session.py  streaming.py  synthetic_tools.py  tool_injection.py  tool_intercept.py  upstream.py
archolith_proxy/routers/: __init__.py  admin_router.py  live_router.py  memory_admin_router.py  metrics_router.py  plugins.py  sessions_router.py
archolith_proxy/shared/: __init__.py  text_utils.py
archolith_proxy/static/: dashboard.html
archolith_proxy/token_accounting/: __init__.py  client_hints.py  estimate.py  gating.py  models.py
archolith_proxy/trace/: __init__.py  builder.py  router.py  store.py
docs/: DRAFT-graph-context-engine.md  trace-format.md
eval/: __init__.py  calibration_corpus.py  calibration_runner.py
scripts/: README.md  assembly_strategy_sweep.py  audit_extraction_quality.py  audit_results.json  benchmark.py  benchmark_parallel.py  check_file_sizes.sh  check_plugin_mode.py  compare_experiments.py  contextbench_harness.py  diag_pipeline.py  e2e_smoke_test.py  harness_benchmark.py  interactive_benchmark.py  live_monitor.py  neo4j_diagnostic.py  opencode_export.py  prepper_sweep.py  proxy_restart.py  proxy_status.py  redundancy.py  replay_session.py  restart_proxy.py  scored_selection_pressure.py  scripted_benchmark.py  session_explorer.py  test_e2e.py  test_extraction_direct.py  test_multi_turn.py  test_phase3_e2e.py  test_phase3_validation.py  test_synthetic_tools.py
scripts/captured/: plan-exec-archolith-context.json
scripts/scenarios/: code_review.json  debugging.json  long_agent.json  ruler_recall.json  synthetic_recall.json  taskflow.json
src/: admin.py  config.py  main.py  metrics.py
src/assembler/: compaction.py  context.py  query_rewrite.py  tail.py
src/extractor/: client.py  dedup.py  embeddings.py  prompts.py
src/graph/: backend.py  cleanup.py  decisions.py  driver.py  (+7 more)
tests/: conftest.py  test_admin_boundary.py  test_admin_config.py  test_admin_loopback_guard.py  test_benchmark_edit_probe.py  test_compliance_redaction.py  test_context_cache.py  test_cors_config.py  test_curator_phase_latency_metrics.py  test_curator_tools.py  test_extraction_concurrency.py  test_generic_http_validate.py  test_graph_session_pass1_fixes.py  test_health.py  test_health_degraded.py  test_helper_cached_tokens.py  test_helper_cost_telemetry.py  test_integration_phase4.py  test_live_stream_auth.py  test_mechanical_mode.py  test_memory_adapter_pass1_fixes.py  test_memory_bounds.py  test_memory_promotion.py  test_memory_promotion_audit.py  test_metrics_consistency.py  test_per_session_config.py  test_per_tool_extraction.py  test_promote_batch_stats.py  test_readiness.py  test_redundancy.py  test_retention_consent.py  test_session_goal.py  test_synthetic_long_session.py  test_tail_validation.py  test_token_accounting.py  test_two_pass_curator.py  test_unit_phase2.py  test_unit_phase3.py  test_unit_phase4.py
(+130 files in other folders)
