[project]
name = "archolith-proxy"
version = "0.3.0"
description = "Self-hosted context intelligence proxy for LLMs — extracts knowledge, compresses context, remembers everything"
requires-python = ">=3.12"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = [
    {name = "Charles Harvey", email = "ctharvey@me.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "neo4j>=5.26.0",
    "openai>=1.60.0",
    "graphiti-core>=0.1.0",
    "tiktoken>=0.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "ladybug>=0.16.0",
]

[project.urls]
Homepage = "https://archolith.dev"
Repository = "https://github.com/Archolith/archolith-context"
Documentation = "https://github.com/Archolith/archolith-context#readme"
Benchmarks = "https://github.com/ctharvey/archolith-bench"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "httpx",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archolith_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["archolith_proxy"]

[tool.ruff]
target-version = "py312"
line-length = 120
