[project]
name = "archolith-proxy"
version = "0.5.0"
description = "Experimental OpenAI-compatible proxy for context compression, session tracing, and context-curation research"
requires-python = ">=3.12"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = [
    {name = "Charles Harvey", email = "ctharvey@me.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "neo4j>=5.26.0",
    "openai>=1.60.0",
    "tiktoken>=0.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "ladybug>=0.16.0",
    "archolith-maintenance>=0.1.0",
]

[project.scripts]
archolith-proxy = "archolith_proxy.main:run"

[project.urls]
Homepage = "https://archolith.dev"
Repository = "https://github.com/Archolith/archolith-context"
Documentation = "https://github.com/Archolith/archolith-context#readme"
Benchmarks = "https://github.com/Archolith/archolith-bench"

[project.optional-dependencies]
java = [
    "javalang>=0.13.0",
]
filter = [
    "archolith-filter>=0.1.0",
]
compliance = [
    "archolith-compliance>=0.1.0",
]
audit = [
    "archolith-audit>=0.1.0",
]
full = [
    "archolith-proxy[filter,compliance,audit]",
]
dev = [
    "archolith-proxy[full]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archolith_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["archolith_proxy"]
markers = [
    "real_config_overrides: opt out of config_overrides.json neutralization (tests the persistence mechanism)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

# ── File Size Budgets ──────────────────────────────────────────────────
# Governance targets to prevent god file re-accumulation.
#
# Boundary              Target    Hard Limit
# ─────────────────────  ───────   ─────────
# Business logic files   ≤300 LOC  ≤500 LOC
# Test files             ≤800 LOC  ≤1,200 LOC
# Config files           ≤100 LOC  ≤200 LOC
# __init__.py            ≤30 LOC   ≤100 LOC
#
# Enforced by `check_file_sizes.sh` in CI — see `.github/workflows/ci.yml`.
[tool.archolith.size-limits]
hard-limit-py = 500
hard-limit-test = 1200
hard-limit-config = 200
hard-limit-init = 100
exclude-dirs = [".venv", ".benchmarks", ".pytest_cache", "__pycache__"]
